# Smart-RF-Plug-Transmitter

./: .gitignore  .mega-linter.yaml  .pylintrc  BUILDING.md  Building.md  CHANGELOG.md  EasyOnEasyOffPlugs.py  IMPROVEMENTS.md  README.md  SocketTransmitter.py  docker-compose.yaml  docker-compose.yml  flows.json
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: Static Analysis.yaml  Static Analysis.yml  dependabot.yaml  mega-linter.yaml  release-please.yaml
Node-Red/: flows.json
docs/: System Diagrams.drawio
socket_transmitter/: Dockerfile  pyproject.toml  socket_transmitter.py
socket_transmitter/plug_codes/: easy_on_easy_off_plugs.py
src/: Dockerfile  EasyOnEasyOffPlugs.py  requirements.txt  socket_transmitter.py
